--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
   "name": "api-comptavision",
   "version": "1.0.0",
-  "description": "API backend Comptavision avec Express et Sequelize",
-  "type": "module",
-  "main": "src/server.js",
+  "private": true,
+  "main": "src/server.mjs",
+  "engines": { "node": "20.x" },
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "migrate": "sequelize db:migrate",
-    "seed": "sequelize db:seed:all",
-    "reset": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all"
+    "start": "node src/server.mjs",
+    "dev": "nodemon src/server.mjs"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.2",
-    "express-rate-limit": "^8.0.1",
-    "helmet": "^8.1.0",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1",
-    "pg": "^8.16.3",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0",
-    "sequelize-cli": "^6.6.2"
-  },
-  "author": "ComptaVision",
-  "license": "ISC"
+    "nodemon": "^3.1.10"
+  }
 }
+
